update 收集器使用